--- a/fdm.html
+++ b/fdm.html
@@ -26,39 +26,27 @@
 			<div id="main">
 
 				<header class="major container medium">
-					<h2>We conduct experiments that
-					<br />
-					may or may not seriously
-					<br />
-					break the universe</h2>
+					<h2>Recent FDM Projects
+					<br /></h2>
 					<!--
 					<p>Tellus erat mauris ipsum fermentum<br />
 					etiam vivamus nunc nibh morbi.</p>
 					-->
 				</header>
 
-				<div class="box alt container">
-					<section class="feature left">
-						<a href="#" class="image icon solid fa-signal"><img src="images/fdm.jpg" alt="" /></a>
-						<div class="content">
-							<h3>FDM Printing</h3>
-							<p>Do you need low-cost rapid prototyping of basic proof-of-concept models? FDM printing is for you, Our FDM printers offer affordable and quick printing with a wide range of filament materials and colours.</p>
-						</div>
+				<div>
+					<section class=".image.fit">
+						<img class="fit" src="images/fdm.jpg" alt="" />
 					</section>
-					<section class="feature right">
-						<a href="#" class="image icon solid fa-code"><img src="images/sla.jpg" alt="" /></a>
-						<div class="content">
-							<h3>SLA Resin Printing</h3>
-							<p>Are you looking for detailed prints that are strong? Then resin printing is for you, SLA printers offer great printing resolution that cannot be achieved with FDM printers, and create very strong prints with our ABS like resin, but SLA printers are limited in their printing volume. </p>
-						</div>
+                    <section class="feature left">
+						<img src="images/fdm.jpg" alt="" />
+                    </section>
+                    <section class="feature middle">
+						<img src="images/fdm.jpg" alt="" />
 					</section>
-					<section class="feature left">
-						<a href="#" class="image icon solid fa-mobile-alt"><img src="images/cad.jpg" alt="" /></a>
-						<div class="content">
-							<h3>CAD Design</h3>
-							<p>Know what you want but don't know how to model it? Can't find the model you want? Or just want something more custom? Then we will design any functional piece you want and make it with FDM or Resin to your exact requirements.</p>
-						</div>
-					</section>
+                    <section class="feature left">
+						<img src="images/fdm.jpg" alt="" />
+                    </section>
 				</div>
 
 				<!--
